# Watson

./: .dockerignore  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: build.yml
src/: main.rs
src/cli/: mod.rs
src/data/: mod.rs
src/email/: mod.rs
src/engine/: mod.rs
src/http/: mod.rs
src/output/: mod.rs
src/ratelimit/: mod.rs
src/scrape/: mod.rs
src/tui/: mod.rs
src/ua/: mod.rs
src/variations/: mod.rs
